examples/test/testpolicy12888.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12888
  namespace: namespace383
spec:
  podSelector:
    matchLabels:
      key7: value37
      key41: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value33
          key19: value29
          key47: value34
      podSelector:
        matchLabels:
          key24: value6
